# repo-radar

./: README.md  pyproject.toml
src/repo_radar/: __init__.py  cli.py  scoring.py
tests/: test_scoring.py
